# visteon-engine-training

./: .gitmodules  CMakeLists.txt  Dockerfile  NOTES.md
examples/gltf/01_triangle/: triangle.blend
examples/gltf/01_triangle/export/: triangle.gltf
examples/gltf/02_plane/: plane.blend
examples/gltf/02_plane/export/: plane.gltf
examples/gltf/03_shaders/export/: shaders.gltf
examples/gltf/03_shaders/export/shaders/: BasicShader.frag.glsl  BasicShader.vert.glsl
examples/gltf/04_suzanne/: suzanne.blend
examples/gltf/04_suzanne/export/: suzanne.gltf
examples/gltf/04_suzanne/export/shaders/: BasicShader.frag.glsl  BasicShader.vert.glsl
examples/gltf/05_suzanne_uniforms/export/: suzanne.gltf
examples/gltf/05_suzanne_uniforms/export/shaders/: BasicShader.frag.glsl  BasicShader.vert.glsl
examples/gltf/06_shadertoy/: shadertoy.blend
examples/gltf/06_shadertoy/export/: shadertoy.gltf
examples/gltf/06_shadertoy/export/shaders/: ShaderToy.frag.glsl  ShaderToy.vert.glsl  imgui.ini
scripts/: build_ti_aarch64.sh
src/: main.cc
src/eng/gl/: buffer.cc  buffer.hh  forward.hh  program.cc  program.hh  shader.cc  shader.hh  vertexarray.cc  vertexarray.hh
src/eng/gltf/: gltf.cc  gltf.hh
src/eng/mesh/: vertex.hh
src/eng/render/: glslmaterial.cc  glslmaterial.hh
